Fixed cropping of device dates

--- a/ota-plus-web/app/reactapp/css/pages.scss
+++ b/ota-plus-web/app/reactapp/css/pages.scss
@@ -585,11 +585,13 @@
             .device-info-item {
                 margin: 0 10px;
                 display: inline-block;
-                max-width: 120px;
+
+                &.crop {
+                    max-width: 120px;
+                }
 
                 @media(max-width: 1420px) {
                     margin: 0 8px;
-                    max-width: 100px;
                 }
 
                 .device-info-label {
